# calcpi-code

./: CMakeLists.txt  CalcPiApp.cpp  CalcPiApp.h  CalcPiBenchmarkThread.cpp  CalcPiBenchmarkThread.h  CalcPiFitBenchmarkResults.cpp  CalcPiFitBenchmarkResults.h  CalcPiMainFrame.cpp  CalcPiMainFrame.h  CalcPiMainFrameBase.cpp  CalcPiMainFrameBase.h  CalcPiVirtualListControl.cpp  CalcPiVirtualListControl.h  CalcPiWorkerThread.cpp  CalcPiWorkerThread.h  CalculateEMPFR.cpp  CalculateEMPFR.h  CalculatePIBoost.cpp  CalculatePIBoost.h  CalculatePIChudnovsky.cpp  CalculatePIChudnovsky.h  CalculatePIChudnovskyOMP.cpp  CalculatePIChudnovskyOMP.h  CalculatePIMPFR.cpp  CalculatePIMPFR.h  CalculationInterface.h  CalculatorFactory.cpp  CalculatorFactory.h  CommonIncludes.h  FindGMP.cmake  FindMPFR.cmake  FindMPIR.cmake  License.txt  ProgressIndicatorInterface.h  README.md  config.h.in  getMemorySize.c  getRSS.c  version.h
install/: calc_pi_mingw64.nsi  calc_pi_vc64.nsi  calc_pi_vc86.nsi  create_setup_mingw64.bat  create_setup_vc64.bat  create_setup_vc86.bat
res/: CalcPi.fbp
res/osx/: calc_pi-Info.plist
res/png/: calc_pi_png.h
res/win/: calc_pi.rc
